# Mi-Portfolio-Web

./: asgi.py  db.sqlite3  netlify.toml  pyproject.toml  render.yaml  requirements.txt  wsgi.py
myportfolio/: settings.py  urls.py
project_images/documentos/: Automatización_de_Scripts.docx  Conceptos.docx  DevOps.docx  Django.docx  Django_REST_Crear_APIs.docx  Python_Avanzado.docx
projects/: forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_rename_repository_link_project_url_and_more.py  0003_project_description.py  0004_project_technologies_alter_project_description_and_more.py  0005_alter_project_technologies.py  0006_documento.py  0007_documento_usuario.py  0008_documento_tipo_documento.py  0009_alter_documento_tipo_documento.py
projects/static/css/: styles.css
projects/templates/: administrar_proyectos.html  aprendizaje.html  cargar_documentos.html  eliminar_documento.html  index.html  portfolio.html
